feat(cps): 支持官方活动能力和聚推客订单同步
- 为CpsThirdPartyActivity添加多项官方活动能力字段支持
- Haodanku和Jutuike客户端新增官方活动能力标记及本地生活平台判断逻辑
- JutuikeUnionVendorClient新增配置字段schema和活动解析能力
- 新增CpsJutuikeOrderSyncJob定时任务，分时段拉取聚推客订单并持久化
- CpsRebateActivityServiceImpl扩展官方活动能力字段装饰方法，并支持聚推客推广链接生成
- 优化活动同步服务，改善字段截断和第三方平台代码解析支持
- 活动管理及App营销响应VO中新增官方活动能力相关字段及会员相关推广状态信息
- 新增本地生活活动过滤功能，支持前端请求参数localLifeOnly筛选
- 新增转链请求中会员ID支持，增强推广内容生成准确性
- 支持SID复用和缓存，提升会员归因的精确度和效率
- 调整元数据结构，确保包含官方活动能力标识和本地生活信息
- 增强活动排序和筛选逻辑，加入本地生活规则支持
- 洋葱剥离官方活动能力判断逻辑，提升代码复用性和扩展性